...
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>

    <string name="command2">Scan pairing code</string>
    <string name="command3">I can\'t access my camera</string>
    <string name="create_a_wallet">Create a wallet</string>
    <string name="log_in">Log in</string>
    <string name="pair_your_wallet">Pair Your Wallet</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Blockchain Wallet via your PC or Mac at %1$s.</string>
    <string name="pair_wallet_step_2">Go to Settings / General.</string>
    <string name="pair_wallet_step_3">Click Show Pairing Code to reveal a QR Code, a square black &amp; white barcode. Scan the code with your camera.</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="default_wallet_name">My Bitcoin Wallet</string>

    <!-- Recover Funds -->
    <string name="recover_funds">Recover Funds</string>
    <string name="recover_funds_warning_message">You should always pair or login if you have access to your Wallet ID and password. Recovering your funds will create a new Wallet ID. Would you like to continue?</string>
    <string name="recover_funds_instructions">Enter your 12 backup words with spaces to recover your funds &amp; transactions</string>
    <string name="recovery_passphrase">Backup phrase</string>
    <string name="invalid_recovery_phrase">Invalid backup phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="restore_failed">Restoring wallet failed. Please try again</string>
    <string name="restoring_wallet">Restoring wallet.</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="agree_terms_of_service">By creating a new wallet you agree to the</string>
    <string name="blockchain_tos">Blockchain Terms of Service</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="new_wallet">New Wallet</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_medium">Regular</string>
    <string name="strength_strong">Strong</string>
    <string name="strength_normal">Normal</string>

    <string name="CONTINUE">Continue</string>
...
